--- a/Pandas/pandas10_pandas_pivot/pandas10_pandas_pivot.ipynb
+++ b/Pandas/pandas10_pandas_pivot/pandas10_pandas_pivot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNorKTrWQAtn/VU3dkmWpN2"
+      "authorship_tag": "ABX9TyOw7gdSUcBo1PngHwMALIaO"
     },
     "kernelspec": {
       "name": "python3",
@@ -28,7 +28,7 @@
         "id": "kkzf4Bta9XWr",
         "outputId": "864b04ea-642f-45eb-86eb-9d273cf61ccb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -49,6 +49,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pivot allows you to transform or reshape data"
+      ],
+      "metadata": {
+        "id": "BwsTCcAfKIzC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd"
@@ -56,7 +65,7 @@
       "metadata": {
         "id": "3MMaunJX69Wj"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +82,7 @@
         "id": "BAvnDjwp69TD",
         "outputId": "d1d4be23-8504-4944-c90e-dd50708fc189"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +482,7 @@
         "id": "hBJFeSic69Pl",
         "outputId": "7c1cc929-4bbf-459a-c1b2-b2d6142d1f30"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +806,7 @@
         "id": "gOs27n2e69Mp",
         "outputId": "c143d907-bebc-4598-b503-74033a1b77ac"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1105,7 @@
         "id": "iJNIx2zq69Jt",
         "outputId": "45a9b25f-eafd-4f0a-e6a2-f0eaaea2b14c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1404,7 @@
         "id": "EmK9iG7G69Gv",
         "outputId": "a32d471d-1ab2-4c7e-9b25-6f5fe2815cd7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1719,7 +1728,7 @@
         "id": "ZSmCxTqk69Db",
         "outputId": "e92823ee-21d2-4f10-cccb-1a14b90906c0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2122,7 +2131,7 @@
         "id": "8POEKssMBRpY",
         "outputId": "9057b954-e708-474f-87a2-0fdc1a5c1c64"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2514,7 +2523,7 @@
         "id": "1fOvQ1IBBRl6",
         "outputId": "36218672-d788-44ec-d234-907e547eb270"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2829,7 +2838,7 @@
         "id": "mNfqzn_v69AT",
         "outputId": "94e07aa7-df65-42ef-fa81-f616b9a900f5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3153,7 +3162,7 @@
         "id": "75U0nN9AGFbT",
         "outputId": "a5eb06aa-e2d1-44cf-b708-866dd719ea5a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3487,7 +3496,7 @@
         "id": "T5jfJ1S3Gxrr",
         "outputId": "8ca93dee-fc18-439e-9ada-51ed26d2d489"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3863,7 +3872,7 @@
         "id": "wKZ24o1hGxoL",
         "outputId": "1f012d3a-4e8e-4e41-93be-6e1e8ace304e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3932,7 +3941,7 @@
       "metadata": {
         "id": "DGY9yghqGxll"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3948,7 +3957,7 @@
         "id": "2qh655OYG8_y",
         "outputId": "57622181-4ebf-4932-a34e-57675270a8cd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4247,7 +4256,7 @@
       "metadata": {
         "id": "8FbtjVe8IBRt"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     }
   ]
