--- a/Pandas/pandas13_pandas_crosstab/pandas13_crosstab.ipynb
+++ b/Pandas/pandas13_pandas_crosstab/pandas13_crosstab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+ThMrdWrWPmdGqrN/ix5d"
+      "authorship_tag": "ABX9TyP+YG/JMdpNtNQPR8+yVFf6"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,6 +49,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Before we dive into all things crosstabs, it's worth getting our definitions right. A crosstab (short for cross-tabulation) is a table used in statistics to display the relationship between two or more categorical variables. It allows you to examine how different categories or groups of variables intersect and how they are distributed within a dataset. In short, a crosstab summarizes categorical data, providing a quick and easy way to see patterns or associations between variables."
+      ],
+      "metadata": {
+        "id": "83vnqvORSw2u"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd"
@@ -56,7 +65,7 @@
       "metadata": {
         "id": "oL0ZTrrrLPHa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +82,7 @@
         "id": "JKSjcZQbLP4F",
         "outputId": "30438b51-e75f-4af8-be54-2a839b4b1dee"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +519,7 @@
         "id": "6TNncQ0dLP0b",
         "outputId": "75e19dde-965f-4133-cf36-6f9608330c43"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +814,7 @@
       "metadata": {
         "id": "6ZvpztE4LPxw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +830,7 @@
         "id": "D78zA1AwLPvK",
         "outputId": "a4f79ab9-0c21-4a4e-ceb5-c14babf666d5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1118,7 +1127,7 @@
         "id": "qq5kECvOMc_U",
         "outputId": "278bd756-7b15-40cf-9f9d-da12fa132660"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1426,7 +1435,7 @@
         "id": "OAd09VpfMigz",
         "outputId": "3de6c351-27d8-405d-aa92-224a7bae5f5d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1761,7 +1770,7 @@
         "id": "uLrDcyfLMc8E",
         "outputId": "c1ce211b-e2fd-4e51-e366-cd1867974886"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2111,7 +2120,7 @@
         "id": "SxQySIoJOIdk",
         "outputId": "91611476-726b-4c5b-d34c-2ff1ea8bf37c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2403,7 +2412,7 @@
       "metadata": {
         "id": "WmfDvWksPDUU"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2419,7 +2428,7 @@
         "id": "U2J_db9qPHVG",
         "outputId": "1f600de5-caaa-49b0-84a0-1b7beee92dab"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2700,7 +2709,7 @@
       "metadata": {
         "id": "83d-a3RdOKXM"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
